Fix quick volume edit drawer colour in dark mode
The problem has been reported by johann8 in bacularis-app repository.

https://github.com/bacularis/bacularis-app/issues/22

--- a/Common/CSS/baculum.css
+++ b/Common/CSS/baculum.css
@@ -70,7 +70,7 @@ a {
 	margin-top: 8px;
 }
 
-#sidebar, #quick_resource_edit {
+#sidebar, #quick_resource_edit, #quick_volume_edit {
 	color: var(--text-color);
 	background-color: var(--color-strong);
 }
